# ZCWorker

./: .gitignore  .gitmodules  LICENSE.txt  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  zcjni.cpp  zcjni.hpp
app/src/main/java/ozelentok/zcworker/: AppPreferences.kt  KeepAliveService.kt  MainActivity.kt  SettingsActivity.kt  Utils.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: root_preferences.xml
gradle/wrapper/: gradle-wrapper.properties
